fix(button): Text button hover isn't visible with the dark theme

--- a/packages/react-dialogues/src/styles.css
+++ b/packages/react-dialogues/src/styles.css
@@ -6,7 +6,6 @@
 
 html,
 [data-theme='light'] {
-  --rd-hover-shadow: rgba(0, 0, 0, 0.05);
   --rd-primary: #1677ff;
   --rd-primary-dark: #0958d9;
   --rd-primary-light: #4096ff;
@@ -20,6 +19,7 @@ html,
   --rd-bg-contast: #262626;
   --rd-bg-disabled: rgba(0, 0, 0, 0.04);
   --rd-btn-border: #d9d9d9;
+  --rd-hover-shadow: rgba(0, 0, 0, 0.05);
   --rd-text: rgba(0, 0, 0, 0.88);
   --rd-text-disabled: rgba(0, 0, 0, 0.25);
 }
@@ -29,6 +29,7 @@ html,
   --rd-bg-contast: #424242;
   --rd-bg-disabled: rgba(255, 255, 255, 0.04);
   --rd-btn-border: #424242;
+  --rd-hover-shadow: rgba(255, 255, 255, 0.05);
   --rd-text: rgba(255, 255, 255, 0.85);
   --rd-text-disabled: rgba(255, 255, 255, 0.25);
 }
